# conformal-prediction-in-active-learning

./: .env.example  .gitignore  Makefile  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: cifar10.yaml  cifar100.yaml  stl10.yaml  svhn.yaml
configs/experiment/: al_combined.yaml  al_combined_v_shaped.yaml  al_cp_size.yaml  al_cp_v_shaped.yaml  al_entropy.yaml  al_least_confidence.yaml  al_margin.yaml  al_random.yaml
configs/logger/: tensorboard.yaml
configs/model/: resnet18.yaml  resnet18_cifar100.yaml  resnet18_stl10.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
scripts/: quick_test.ps1  run_all_experiments.ps1  run_all_experiments.sh
src/: eval.py  train.py
src/data/: __init__.py  al_dataset.py  cifar100_datamodule.py  cifar10_datamodule.py  stl10_datamodule.py  svhn_datamodule.py
src/models/: __init__.py  resnet_module.py
src/utils/: __init__.py  al_strategies.py  conformal.py  utils.py
tests/: conftest.py  test_data.py
